<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/carView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_2"
    android:paddingBottom="@dimen/dp_2"
    cardView:cardCornerRadius="8dp"
    cardView:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dp_20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dp_20" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_2"
            android:gravity="center_vertical"
            android:lines="1"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            cardView:layout_constraintStart_toStartOf="parent"
            cardView:layout_constraintTop_toTopOf="parent"
            tools:text="@string/id" />


        <TextView
            android:id="@+id/tv_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_2"
            android:gravity="center_vertical"
            android:lines="1"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            cardView:layout_constraintLeft_toRightOf="@id/tv_id"
            cardView:layout_constraintRight_toRightOf="parent"
            cardView:layout_constraintTop_toTopOf="parent"
            tools:text="@string/demo_label" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lines="1"
            android:padding="5dp"
            android:text="@string/demo_distance"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            cardView:layout_constraintStart_toStartOf="@id/tv_id"
            cardView:layout_constraintTop_toBottomOf="@id/tv_id" />


        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lines="1"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            cardView:layout_constraintLeft_toRightOf="@id/tv_distance"
            cardView:layout_constraintRight_toRightOf="parent"
            cardView:layout_constraintTop_toBottomOf="@id/tv_id"
            tools:text="@string/demo_type" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tv_distance">

            <LinearLayout
                android:id="@+id/bikes_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@+id/guideline1"
                cardView:layout_constraintTop_toBottomOf="@id/tv_distance">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_10"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_bike"
                    tools:background="@drawable/ic_bike" />

                <TextView
                    android:layout_marginBottom="@dimen/dp_0"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/available_bikes" />


                <TextView
                    android:id="@+id/tv_available_bikes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:textColor="@color/green"
                    android:textSize="@dimen/sp_80"
                    tools:text="@string/id" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/available_places"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/guideline2"
                cardView:layout_constraintTop_toTopOf="@id/tv_distance">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_10"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_lock"
                    tools:background="@drawable/ic_lock" />

                <TextView
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/available_places" />


                <TextView
                    android:id="@+id/tv_available_places"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_80"
                    tools:text="@string/id" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>